force-app/main/default/objects/prescription_template__c/prescription_template__c.object-meta.xml
<CustomObject>
    <label>prescription template</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>prescription_emplates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>