force-app/main/default/objects/prescription_template__c/fields/generic__c.field-meta.xml
<CustomField>
    <fullName>generic__c</fullName>
    <label>generic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>