force-app/main/default/objects/prescription_template__c/fields/instructions__c.field-meta.xml
<CustomField>
    <fullName>instructions__c</fullName>
    <label>instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>