force-app/main/default/objects/prescription_template__c/fields/medicineName__c.field-meta.xml
<CustomField>
    <fullName>medicineName__c</fullName>
    <label>medicineName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>