force-app/main/default/objects/prescription_template__c/fields/numOfDays__c.field-meta.xml
<CustomField>
    <fullName>numOfDays__c</fullName>
    <label>numOfDays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>