force-app/main/default/objects/prescription_template__c/fields/templateName__c.field-meta.xml
<CustomField>
    <fullName>templateName__c</fullName>
    <label>templateName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>